--- a/polls/templates/polls/filmContent.html
+++ b/polls/templates/polls/filmContent.html
@@ -2,35 +2,35 @@
 <div id="detail-container" class="container align-center">
     {% if film %}
         <h3>{{ film.Title }} ({{ film.Year }})</h3>
-        <table>
-            <tr>
-                <td>
-                    <ul class="pager">
-                        {% if prevFilmId %}
-                            <li><a href="{% url 'polls:detail' prevFilmId %}"
-                                   class="previous round ">&#8249;</a>
-                            </li>
-                        {% else %}
-                            <li class="disabled"><a href="#" class="previous round ">&#8249;</a></li>
-                        {% endif %}
-                    </ul>
-                </td>
-                <td>
-                    <img src={{ film.Poster }}>
-                </td>
-                <td>
-                    <ul class="pager">
-                        {% if nextFilmId %}
-                            <li><a href="{% url 'polls:detail' nextFilmId %}" class="next round">&#8250;</a>
-                            </li>
-                        {% else %}
-                            <li class="disabled"><a href="#" class="next round ">&#8250;</a></li>
-                        {% endif %}
-                    </ul>
-                </td>
-            </tr>
-        </table>
-        {% myratings film %}
+        <div id="film-container">
+            <div id="left">
+                <ul id="horizontal-list" class="pager">
+                    {% if prevFilmId %}
+                        <li id="left">
+                            <a href="{% url 'polls:detail' prevFilmId %}" class="previous round ">&#8249;</a>
+                        </li>
+                    {% else %}
+                        <li id="left" class="disabled"><a href="#" class="previous round ">&#8249;</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+            <div id="right">
+                <ul id="horizontal-list" class="pager">
+                    {% if nextFilmId %}
+                        <li id="right"><a href="{% url 'polls:detail' nextFilmId %}" class="next round">&#8250;</a>
+                        </li>
+                    {% else %}
+                        <li id="right" class="disabled"><a href="#" class="next round ">&#8250;</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+            <div id="middle">
+                <img src={{ film.Poster }} class="img-responsive">
+            </div>
+        </div>
+        <div>
+            {% myratings film %}
+        </div>
         <div class="summary-text">{{ film.Plot }}</div>
     {% else %}
         <h3/>
