--- a/polls/templates/polls/filmContent.html
+++ b/polls/templates/polls/filmContent.html
@@ -23,7 +23,7 @@
             </ul>
         </div>
         <div id="film-container">
-            <div id="text">{{ film.Title }} ({{ film.Year }})</div>
+            <h3>{{ film.Title }} ({{ film.Year }})</h3>
             <div id="middle">
                 <img src={{ film.Poster }} class="img-responsive">
             </div>
