--- a/polls/static/polls/css/custom.css
+++ b/polls/static/polls/css/custom.css
@@ -120,12 +120,14 @@ img {
 
 #detail-container {
     height: 100%;
+    overflow: scroll;
 }
 
 #film-container {
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 5px;
+    /*margin-left: 20px;*/
+    /*margin-right: 20px;*/
+    /*margin-bottom: 5px;*/
+    margin: auto;
 }
 
 .pager {
