--- a/polls/static/polls/css/custom.css
+++ b/polls/static/polls/css/custom.css
@@ -124,10 +124,9 @@ img {
 }
 
 #film-container {
-    /*margin-left: 20px;*/
-    /*margin-right: 20px;*/
-    /*margin-bottom: 5px;*/
-    margin: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: -20px;
 }
 
 .pager {
