--- a/polls/static/polls/css/custom.css
+++ b/polls/static/polls/css/custom.css
@@ -144,6 +144,10 @@ img {
     align-items: center;
 }
 
+.front {
+    z-index: 10;
+}
+
 .h1, .h2, .h3, h1, h2, h3 {
     margin-top: 5px;
     margin-bottom: 5px;
