--- a/polls/templates/registration/login.html
+++ b/polls/templates/registration/login.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-sm-10 margin-top">
                     <button class="btn btn-primary"><a href="{% url 'social:begin' 'facebook' %}"><i
-                            class="fa fa-facebook-square left"></i> Login with Facebook</a>
+                            class="fa fa-facebook-square"></i> Login with Facebook</a>
                     </button>
                 </div>
             {% endbuttons %}
