--- a/polls/templates/polls/filmContent.html
+++ b/polls/templates/polls/filmContent.html
@@ -2,25 +2,25 @@
 <div id="detail-container" class="container align-center">
     {% if film %}
         <div id="film-container">
-            <div class="left">
+            <div class="left shift-down">
                 <ul class="pager">
                     {% if prevFilmId %}
-                        <li class="left">
+                        <li class="left shift-down">
                             <a href="{% url 'polls:detail' prevFilmId %}" class="previous round front">&#8249;</a>
                         </li>
                     {% else %}
-                        <li class="left disabled"><a href="#" class="previous round front">&#8249;</a></li>
+                        <li class="left disabled shift-down"><a href="#" class="previous round front">&#8249;</a></li>
                     {% endif %}
                 </ul>
             </div>
-            <div class="right">
+            <div class="right shift-down">
                 <ul class="pager">
                     {% if nextFilmId %}
-                        <li class="right"><a href="{% url 'polls:detail' nextFilmId %}"
-                                             class="next round front">&#8250;</a>
+                        <li class="right shift-down"><a href="{% url 'polls:detail' nextFilmId %}"
+                                                        class="next round front">&#8250;</a>
                         </li>
                     {% else %}
-                        <li class="right disabled"><a href="#" class="next round front">&#8250;</a></li>
+                        <li class="right disabled shift-down"><a href="#" class="next round front">&#8250;</a></li>
                     {% endif %}
                 </ul>
             </div>
