--- a/polls/static/polls/css/custom.css
+++ b/polls/static/polls/css/custom.css
@@ -174,6 +174,10 @@ img {
     margin-bottom: 5px;
 }
 
+.form-group {
+    margin-bottom: 5px;
+}
+
 .h1, .h2, .h3, h1, h2, h3 {
     margin-top: 5px;
     margin-bottom: 5px;
