--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -43,7 +43,14 @@
                                 <a href="{% url 'auth_logout' %}">Sign out</a>
                             </li>
                         </ul>
+                    {% else %}
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="{% url 'auth_login' %}">Sign in</a>
+                            </li>
+                        </ul>
                     {% endif %}
+
                 {% endblock %}
             </div><!--/.navbar-collapse -->
         </div>
