Feature/registration on demand (#8)
* allow anonimous rate - store in session

* anonymous get top recommendations

* wanna sign in?

* signal on log in action

* don't optimize imports

* don't optimize imports

* restore ratings fron anonimious session

* support for empty recommendations

* remove animation

* simplify js

* fix units

Co-authored-by: Pavel Lepekhin <pavel.lepekhin@sbb.ch>

--- a/polls/templates/polls/top.html
+++ b/polls/templates/polls/top.html
@@ -3,13 +3,26 @@
 {% load bootstrap3 %}
 
 {% block content %}
-    <h3 style="text-align: left">Top Recommendations for you:</h3>
-    <ul>
-        {% for recommendation in recommendations %}
-            <li>Predicting rating {{ recommendation.0|floatformat:1 }} for
-                <a href="https://www.imdb.com/title/{{ recommendation.1.imdbID }}">{{ recommendation.1.Title }}
-                    ({{ recommendation.1.Year }})</a> | <a href="{% url 'polls:detail' recommendation.1.id %}">Rate?</a>
-            </li>
-        {% endfor %}
-    </ul>
+    <div class="mg-5">
+        {% if recommendations %}
+            <h3>Top Recommendations for you:</h3>
+            <ul>
+                {% for recommendation in recommendations %}
+                    <li>Predicting rating {{ recommendation.0|floatformat:1 }} for
+                        <a href="https://www.imdb.com/title/{{ recommendation.1.imdbID }}">{{ recommendation.1.Title }}
+                            ({{ recommendation.1.Year }})</a> | <a
+                                href="{% url 'polls:detail' recommendation.1.id %}">Rate?</a>
+                    </li>
+                {% endfor %}
+
+                {% if not user.is_authenticated %}
+                    <li class="optional_sign_in">Want to save your recommendations?
+                        <a href="{% url 'auth_login' %}">Sign in</a>
+                    </li>
+                {% endif %}
+            </ul>
+        {% else %}
+            <h3>Vote for films to get recommendations.</h3>
+        {% endif %}
+    </div>
 {% endblock %}
