--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'polls:home' %}">Films</a>
+                <a class="navbar-brand" href="{% url 'polls:index' %}">Films</a>
                 <a class="navbar-brand" href="{% url 'polls:top' %}">Recommendations</a>
             </div>
             <div class="navbar-collapse collapse">
@@ -43,7 +43,14 @@
                                 <a href="{% url 'auth_logout' %}">Sign out</a>
                             </li>
                         </ul>
+                    {% else %}
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="{% url 'auth_login' %}">Sign in</a>
+                            </li>
+                        </ul>
                     {% endif %}
+
                 {% endblock %}
             </div><!--/.navbar-collapse -->
         </div>
