--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div id="hello">
-        <div id="hello-window">
+        <div id="hello-window" class="width_limiter">
             <h3>How to use this app:</h3>
             <p>1) Rate at least 5 films that you have seen</p>
             <p>2) See new films recommendations for you in tab <b>Recommendations</b></p>
