--- a/polls/templates/polls/filmContent.html
+++ b/polls/templates/polls/filmContent.html
@@ -1,5 +1,5 @@
 {% load myratings %}
-<div id="detail-container" class="container align-center">
+<div id="detail-container" class="container align-center width_limiter">
     {% if film %}
         <div id="film-container">
             <div class="left shift-down">
