--- a/polls/templates/polls/contact.html
+++ b/polls/templates/polls/contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load admin_urls %}
 {% load bootstrap3 %}
-{% load fontawesome %}
+{% load fontawesome_5 %}
 {% block title %}Contact{% endblock %}
 {% block content %}
     <div class="container">
